# fastapi-guard

./: .gitattributes  .gitignore  .mike.yml  .pre-commit-config.yaml  .python-version  .safety-project.ini  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  compose.yml  context7.json  index.html  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  reqs.pip  setup.py  tatus  version_helper.py  versions.json  vulture_whitelist.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/scripts/: bump_version.py
.github/workflows/: ci-3-10.yml  ci-3-11.yml  ci-3-12.yml  ci.yml  code-ql.yml  container-release.yml  docs.yml  greetings.yml  labeler.yml  release.yml  scheduled-lint.yml  stale.yml  summary.yml  sync-labels.yml
0.3.2/: 404.html  index.html  sitemap.xml  versions.json
0.3.2/installation/: index.html
0.3.2/release-notes/: index.html
0.3.2/search/: search_index.json
0.3.2/versions/: versions.json
0.3.4/: 404.html  index.html  sitemap.xml
0.3.4/installation/: index.html
0.3.4/release-notes/: index.html
0.3.4/search/: search_index.json
0.4.0/: 404.html  index.html  objects.inv  sitemap.xml
0.4.0/installation/: index.html
0.4.0/release-notes/: index.html
0.4.0/search/: search_index.json
1.0.0/: 404.html  index.html  sitemap.xml
1.0.0/installation/: index.html
1.0.0/release-notes/: index.html
1.0.0/search/: search_index.json
1.0.0/versions/: versions.json
1.1.0/: 404.html  index.html  sitemap.xml
1.1.0/installation/: index.html
1.1.0/release-notes/: index.html
1.1.0/search/: search_index.json
1.1.0/versions/: versions.json
1.2.0/: 404.html  index.html  sitemap.xml
1.2.0/installation/: index.html
1.2.0/release-notes/: index.html
1.2.0/search/: search_index.json
1.2.1/: 404.html  index.html  sitemap.xml
1.2.1/installation/: index.html
1.2.1/release-notes/: index.html
1.2.1/search/: search_index.json
1.2.1/versions/: versions.json
1.2.2/: 404.html  index.html  sitemap.xml
1.2.2/installation/: index.html
1.2.2/release-notes/: index.html
1.2.2/search/: search_index.json
1.2.2/versions/: versions.json
1.3.2/: 404.html  index.html  sitemap.xml
1.3.2/installation/: index.html
1.3.2/release-notes/: index.html
1.3.2/search/: search_index.json
1.3.2/versions/: versions.json
1.4.0/: 404.html  index.html  sitemap.xml
1.4.0/installation/: index.html
1.4.0/release-notes/: index.html
1.4.0/search/: search_index.json
1.5.0/: 404.html  index.html  sitemap.xml
1.5.0/installation/: index.html
1.5.0/release-notes/: index.html
1.5.0/search/: search_index.json
1.5.0/versions/: versions.json
2.0.0/: 404.html  index.html  sitemap.xml
2.0.0/installation/: index.html
2.0.0/release-notes/: index.html
2.0.0/search/: search_index.json
2.0.0/versions/: versions.json
2.0.1/: 404.html  index.html  sitemap.xml
2.0.1/installation/: index.html
2.0.1/release-notes/: index.html
2.0.1/search/: search_index.json
2.0.1/versions/: versions.json
2.1.0/: 404.html  index.html  sitemap.xml
2.1.0/installation/: index.html
2.1.0/release-notes/: index.html
2.1.0/search/: search_index.json
2.1.0/versions/: versions.json
2.1.1/: 404.html  index.html  sitemap.xml
2.1.1/installation/: index.html
2.1.1/release-notes/: index.html
2.1.1/search/: search_index.json
2.1.2/: 404.html  index.html  sitemap.xml
2.1.2/installation/: index.html
2.1.3/: 404.html  index.html  sitemap.xml
3.0.0/: 404.html  index.html  sitemap.xml
3.0.1/: 404.html  index.html  sitemap.xml
3.0.2/: 404.html  index.html  objects.inv  sitemap.xml
4.0.0/: 404.html  index.html  sitemap.xml
4.0.1/: 404.html  index.html  sitemap.xml
4.0.2/: 404.html  index.html  sitemap.xml
4.0.3/: 404.html  index.html  robots.txt  sitemap.xml
4.1.0/: 404.html  index.html  sitemap.xml
4.1.1/: 404.html  index.html  sitemap.xml
4.1.2/: 404.html  index.html  sitemap.xml
4.2.0/: 404.html  index.html  sitemap.xml
4.2.1/: 404.html  index.html  sitemap.xml
4.2.2/: 404.html  index.html  llms.txt  sitemap.xml
4.3.0/: 404.html  index.html  objects.inv  sitemap.xml
4.3.1/: 404.html  index.html  sitemap.xml
4.4.0/: 404.html  index.html  objects.inv  sitemap.xml
4.4.1/: 404.html  index.html  llms.txt  objects.inv  sitemap.xml
5.0.0/: 404.html  index.html  sitemap.xml
5.1.0/: 404.html  index.html  sitemap.xml
5.1.1/: 404.html  index.html  sitemap.xml
5.2.0/: 404.html  index.html  objects.inv  sitemap.xml
7.0.0/: 404.html  index.html  sitemap.xml
7.1.0/: 404.html  index.html  sitemap.xml
7.1.1/: 404.html  index.html  sitemap.xml
7.2.0/: 404.html  index.html  sitemap.xml
7.2.1/: 404.html  index.html  sitemap.xml
7.2.2/: 404.html  index.html  sitemap.xml
config/: ipban_handler.py  ipinfo_handler.py  sus_patterns.py
docs/: index.md  installation.md  llms.txt  release-notes.md  robots.txt
examples/: Dockerfile  README.md  custom_decorators_example.py  decorator_integration_example.py  docker-compose.yml  main.py  requirements.txt  test_battery.txt
examples/advanced_app/: Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml
examples/advanced_app/app/: main.py  models.py  security.py
examples/advanced_app/app/routes/: __init__.py  access_control.py  admin.py  advanced.py  auth.py  basic.py  behavioral.py  content.py  headers.py  health.py  rate_limiting.py  testing.py
examples/advanced_app/nginx/: nginx.conf
guard/: __init__.py  _middleware_state.py  adapters.py  cloud_ips.py  decorators.py  lifespan.py  middleware.py  models.py  sus_patterns.py  utils.py
handlers/: ipban_handler.py  ipinfo_handler.py
tests/: conftest.py  test_adapters.py  test_cors_preflight_through_pipeline.py  test_ip2_refresh.py  test_lifespan_e2e.py  test_lifespan_init.py  test_middleware_mark_initialized.py  test_middleware_state_registry.py  test_reexports.py  test_security_headers.py  test_utils.py
(+1826 files in other folders)
