[project]
name = "fastapi-guard-advanced-example"
version = "1.0.0"
description = "Production-ready FastAPI Guard example with nginx, gunicorn, and modular layout"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "fastapi-guard",
    "gunicorn",
    "redis",
    "uvicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
